# AI-projects-Repo

./: .envtemplate  .gitignore  README.md  pyproject.toml  run.py
app/: main.py  settings.py
app/core/: embeddings.py  ingest.py  llm_call.py  rag.py  retriver.py
app/routers/: __init__.py  diagnose.py  evaluator.py  heartbeat.py
app/schemas/: chat.py
